Implementing english language

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><em>Eletronic Battery</em></title>
+    <title><em>Eletronic Drums</em></title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Eletronic Battery</h1>
+    <h1>Eletronic Drums</h1>
 
     <div class="keys">
         <div data-key="keyq" class="key">Q</div>
@@ -24,11 +24,11 @@
         <div data-key="keyc" class="key">C</div>
     </div>
     <div class="composer">
-        <input type="text" id="input" placeholder="Composicação Automática" />
+        <input type="text" id="input" placeholder="Automatic Composition" />
         <button>Tocar</button>
     </div>
 
-    <footer>Desenvolvido por Dev. Queiroz</footer>
+    <footer>Made by Dev. Queiroz</footer>
 
     <audio id="s_keyq" src="sounds/keyq.wav"></audio>
     <audio id="s_keyw" src="sounds/keyw.wav"></audio>
